Рефакторинг корзины товаров